--- a/nodeapp/package.json
+++ b/nodeapp/package.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
+        "editor.md": "^1.5.0",
         "express": "^4.17.1",
         "mysql2": "^2.2.5",
         "sequelize": "^6.6.2"
