test:编辑和预览markdown文件已完成

--- a/nodeapp/package.json
+++ b/nodeapp/package.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "editor.md": "^1.5.0",
         "express": "^4.17.1",
         "mysql2": "^2.2.5",
